<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Alarm" Id="{5ecfb3fe-9522-4643-b591-85b9a0d86530}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fbMachineState				:FB_MachineState;	

	fbAlarmSafetyNotRun			:FB_Alarm(TC_Events.UserEventClass.SafetyNotRun ,fbMachineState);
	fbAlarmSafetyFbError		:FB_Alarm(TC_Events.UserEventClass.SafetyFbError ,fbMachineState);
	fbAlarmEmergencyStop		:FB_Alarm(TC_Events.UserEventClass.EmergencyStop ,fbMachineState);
	fbAlarmGripSwichNotOn		:FB_Alarm(TC_Events.UserEventClass.GripSwichNotOn ,fbMachineState);	
	fbAlarmMITSUBISHIError		:FB_Alarm(TC_Events.UserEventClass.MITSUBISHIError ,fbMachineState);
END_VAR

VAR_GLOBAL CONSTANT
	iMaxAlarm					:INT:=10;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>