<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Axis" Id="{5adeac70-0110-4aba-9828-f00220571495}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stAxis						:ARRAY[E_Axis.X_Axis..E_Axis.Gripper] OF AXIS_ref;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>