<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Vision" Id="{19ce6139-658e-4644-9138-c7378a7b0ab0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bLedLight		AT %Q* :BOOL;										//カメラ用LED照明 ターミナル3(EL2004)チャンネル1
	
	nDetectedNum		   :ULINT;										// 検出したブログ数
	aMassCenter			   :ARRAY[0..10] OF TcVnPoint2_LREAL;			// ブロブの重心座標 (x, y)[pixel]
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>